samples/_failures_safe/1761205847_d5ee07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b5c642a.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_9b5c642a.c:159:5: error: expected declaration or statement at end of input
  159 |     } else {
      |     ^
./samples/SAFE/__tmp_9b5c642a.c:159:5: error: expected declaration or statement at end of input
